2008-12-09  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed: period was incorrectly specified
	* Fixed: file names with spaces shows %20 in titles

2008-12-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Manual update with information about order fo allow/disallow records

2008-12-03  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed non-localized string in the long search form
	* Fixed wrong Realm command in CLI script

2008-11-28  Dmitry Dulepov  <dmitry@typo3.org>

	* Updated manual to show how to index https:// sites
	* Fixed small typo in the TS comment

2008-11-27  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #2232: TYPO3SEARCH markers not respected
	* Fixed: CSS list was not aligned properly vertically
	* Fixed bug #2233: (No title) for found documents with spaces
	* Fixed bug #2236: Not all pages of the site are indexed
	* Small manual updates
	* Disable debug logging for now
	* Released version 2.1.4

2008-11-22  Dmitry Dulepov  <dmitry@typo3.org>

	* Make found symbols bold by default
	* Fix regex to detect new lines in the title tag

11-11-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Remove old pager code
	* Fix search limit for records
	* Explain search limiting in the manual
	* Released version 2.1.3

06-11-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Do not attempt to create page title if none exists
	* Add information about Debian to the manual
	* Remove sending HTTP status code 304 as it may cause problems with some pages that contain records
	* Disable usage of "No index" flag
	* Check all ways to set page title in post processing hook
	* Released version 2.1.1
	* Fix "(no title)" for files
	* Remove UdmComment from everywhere because it may conflict with post processing hook
	* Released version 2.1.2

05-11-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed SQL error in TCEmain hook

31-10-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Make sure that functions are not defined more than once in tca.php
	* Add record reindexing to CLI script and TCEmain hook