@@ -2,6 +2,7 @@
 
 	* Fixed: period was incorrectly specified
 	* Fixed: file names with spaces shows %20 in titles
+	* Added more extensions to "disallow" in CLI script
 
 2008-12-04  Dmitry Dulepov  <dmitry@typo3.org>
 
